# queercat-rs

./: .gitignore  .replit  Cargo.toml  PKGBUILD  README.md  queercat  queercat.c  replit.nix  time
.github/workflows/: build-release.yml  release.yml  rust.yml
queercat/: Cargo.toml
queercat-lib/: Cargo.toml
queercat-lib/benches/: queercat_bench.rs
queercat-lib/benches/bench-data/: a  cyrillic  escape  glitch  queercat  queercat-pp
queercat-lib/src/: color.rs  colorizer.rs  driver.rs  flag.rs  lib.rs
queercat-proc/: Cargo.toml
queercat-proc/src/: lib.rs
queercat/src/: main.rs
src/: color.rs  driver.rs  flag.rs  lib.rs  main.rs
