[package]
name = "queercat"
version = "0.1.0"
authors = ["4gboframram"]
edition = "2021"


[lib]
name = "queercat"
path = "src/lib.rs"

[[bin]]
name = "queercat"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
unicode_reader = "1.0.2"
queercat-proc = {path = "./queercat-proc"}
unstringify = "0.1.4"
multi_reader = "0.1.0"
clap-num = "1.0.2"
fixed = "1.23.1"


