[package]
name = "queercat-lib"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unstringify = "0.1.4"
fixed = "1.23.1"
unicode-segmentation = "1.10.1"
memchr = "2.5.0"

[[bench]]
name = "queercat_bench"
harness = false

[dev-dependencies]
criterion = "0.3"
