[package]
name = "queercat"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "queercat"
path = "src/main.rs"

[dependencies]
queercat-lib = {path = "../queercat-lib"}
clap = { version = "4.2.1", features = ["derive"] }
multi_reader = "0.1.0"
clap-num = "1.0.2"
atty = "0.2.14"